--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            '我是铎铎'
 tagline:          'Do great things'
 description:      'My random translations. Tech and news in particular.'
-url:              http://lingduo.net.cn
+url:              /
 
 author:
   name:           'Lingduo'
