--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 # Dependencies
-markdown:         redcarpet
 highlighter:      pygments
 
 # Permalinks
@@ -15,6 +14,7 @@ author:
   name:           'Lingduo'
   url:            http://weibo.com/u/5585285652
 
+gems: [jekyll-paginate, jekyll-gist]
 paginate:         10
 
 # Custom vars
