update tagline setting

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            '我是铎铎'
-tagline:          'Do great things'
+tagline:          '寒山不系江心月 世间云外刹那灯'
 description:      'My random translations. Tech and news in particular.'
 url:              http://lingduo.net.cn
 
