--- a/_config.yml
+++ b/_config.yml
@@ -1,82 +1,34 @@
-# User Settings | Edit there as per required
+# Jekyll configuration
 
-title: 我是铎铎
-url: "https://lingduo.net.cn"
+name: 我是铎铎
+description: 寒山不系江心月 世间云外刹那灯
 
-# This will show up at the top of index page
-site_heading: >
-    我是铎铎
+# url is currently only used only for the RSS feed in feed.xml
+url: https://lingduo.net.cn
 
-email: pleasant3518@126.com
-author: duoduoeeee
-# This description will show up in google search results
-# (for index page) etc.
-description: >
+# baseurl will often be '', but for a project page on gh-pages, it needs to
+# be the project name.
+# *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
+#     run it like so: jekyll serve --baseurl=''
+baseurl: ''
 
+# This can be '' to hide the Github nav button
+github: 'duoduoeeee'
 
-# This will what will show against &copy; in the footer
-copyright: duoduo
-# Toggle your short bio, which will displayed on your index page
-# Just toggle it and run jekyll again to see
-intro: true         # Tip: Remove the span from site_heading if intro is set to true
-# This will be displayed in your intro
-short_bio: >
-    寒山不系江心月 世间云外刹那灯
+# Set this to your UA-# value, or '' to disable the block completely
+gaaccount: ''
 
-permalink: /:title.html
-
-# Comments are powered by disqus
+# Set this to your disqus shortname to enable comments. Note that the 'comments'
+# setting below must also be true. Individual posts can override 'comments' to
+# disable on a post-by-post basis
+disqus: ''
 comments: false
 
-# keep about_stub roughly 12 words long for best results
-# This will show up at the bottom of each post
-# Note that about_footer should be true if you want
-# to see author information at the bottom of each post
-about_stub: >
-    
+permalink: /:year/:title
+paginate: 10
 
-about_footer: false
+highlighter: rouge
+markdown: kramdown
+gems: ['jekyll-paginate']
 
-twitter_username: duoduoeeee
-github_username: duoduoeeee
-facebook_id: ling.duo.5
-
-favicon: true
-favicon_location: "/../../images/favicon.ico"
-
-profile_picture: "../../images/IMG_2195.JPG"
-paginate: 5
-paginate_path: "/page/:num"
-
-####################################
-####################################
-### Build Settings | Don't Touch ###
-####################################
-####################################
-####################################
-
-markdown: redcarpet
-
-gems:
-    - jekyll-paginate
-
-sass:
-    style: compressed
-    sass_dir: _sass
-
-# Scopes
-defaults:
-    -
-        scope:
-            path:   ""
-            type:   "pages"
-        values:
-            layout: "page"
-    -
-        scope:
-            path:   ""
-            type:   "posts"
-        values:
-            layout: "post"
-
-exclude: [vendor] # For travis ci
+exclude: ['README.md', 'LICENSE']
