--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 
 # Setup
 title:               Panoply/blog
-tagline:             'A Jekyll theme for minimal editions'
-description:         'Ed is a Jekyll theme designed for textual editors based on minimal computing principles, and focused on legibility and flexibility.'
+tagline:             'Be simple thus elegant.'
+description:         ''
 url:                 'https://lingduo.net.cn'
-baseurl:             '/'
+baseurl:             ''
 
 # About/contact
 author:
