--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,9 @@ xyquote: "「今夜は月が绮丽ですね」"
 url: https://duoduoeeee.github.io
 feed:
 author_info: <a href="https://duoduoeeee.github.io/">Lingduo</a>
+
+##notificationd##
+alert: 
+alright: 
+warning: 
+notification: 
