--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ highlighter: 'pygments'
 #paginate: 10
 
 title: "Lingduo's blog"
-xyquote: "「今夜は月が绮丽ですね」"
+xyquote: ""
 url: https://duoduoeeee.github.io
 feed:
 author_info: <a href="https://duoduoeeee.github.io/">Lingduo</a>
